# watch-history

./: Cargo.toml  rust-toolchain.toml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/alasdair_cooper/watch_history/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/alasdair_cooper/watch_history/: Core.kt  DefaultApplication.kt  GithubIcon.kt  MainActivity.kt
android/app/src/main/java/com/alasdair_cooper/watch_history/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/alasdair_cooper/watch_history/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/shared/: build.gradle
android/shared/src/androidTest/java/com/alasdair_cooper/watch_history/shared/: ExampleInstrumentedTest.kt
android/shared/src/test/java/com/alasdair_cooper/watch_history/shared/: ExampleUnitTest.kt
shared/: .gitignore  Cargo.toml  uniffi.toml
shared/src/: app.rs  config.rs  film.rs  github.rs  lib.rs  logging.rs  markdown.rs  redirect.rs  services.rs  tokens.rs
shared_types/: Cargo.toml  build.rs
