[workspace]
members = ["shared", "shared_types"]
resolver = "1"

[workspace.package]
authors = ["Alasdair Cooper"]
edition = "2021"
repository = "https://github.com/alasdair-cooper/watch-history/"
license = "MIT"
rust-version = "1.80.1"

[workspace.dependencies]
anyhow = "1.0.100"
crux_core = { git = "https://github.com/redbadger/crux" }
crux_http = { git = "https://github.com/redbadger/crux" }
crux_kv = { git = "https://github.com/redbadger/crux" }
serde = "1.0.228"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
