[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
async-sse = "5.1.0"
async-std = "1.13.2"
chrono = { version = "0.4.42", features = ["serde"] }
crux_core.workspace = true
crux_http.workspace = true
futures = "0.3.31"
rand = "0.9.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
uniffi = "=0.29.4"
url = { version = "2.5.7", features = ["serde"] }
url-macro = "0.2.0"
wasm-bindgen = "0.2.105"
log = "0.4.28"
serde_qs = "0.15.0"
toml = "0.9.8"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[build-dependencies]
uniffi = { version = "=0.29.4", features = ["build"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "=0.29.4", features = ["cli"] }

[features]
typegen = ["crux_core/typegen"]
